fix(sbb-mini-calendar): improve spacing

--- a/src/elements/mini-calendar/mini-calendar/mini-calendar.scss
+++ b/src/elements/mini-calendar/mini-calendar/mini-calendar.scss
@@ -6,3 +6,15 @@
 :host {
   display: block;
 }
+
+.sbb-mini-calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--sbb-spacing-fixed-2x) var(--sbb-spacing-fixed-1x);
+}
+
+.sbb-mini-calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--sbb-spacing-fixed-2x) var(--sbb-spacing-fixed-1x);
+}
